syntax = "proto3";
package ttdung.statechannel.statechannel;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "statechannel/params.proto";
import "statechannel/timelock.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/ttdung/statechannel/x/statechannel/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ttdung/statechannel/statechannel/params";
  }
  // Queries a Timelock by index.
	rpc Timelock(QueryGetTimelockRequest) returns (QueryGetTimelockResponse) {
		option (google.api.http).get = "/ttdung/statechannel/statechannel/timelock/{index}";
	}

	// Queries a list of Timelock items.
	rpc TimelockAll(QueryAllTimelockRequest) returns (QueryAllTimelockResponse) {
		option (google.api.http).get = "/ttdung/statechannel/statechannel/timelock";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetTimelockRequest {
	  string index = 1;

}

message QueryGetTimelockResponse {
	Timelock timelock = 1 [(gogoproto.nullable) = false];
}

message QueryAllTimelockRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTimelockResponse {
	repeated Timelock timelock = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
